--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -2,12 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
 }
 
 html,
 body,
 #app {
     height: 100%;
+    background-color: #eaedf1;
 }
 
 [v-cloak] {
